--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
 					<p>Lets go! ready to learn</p>
 				</div>
 				<div class="body-right">
-					<label for="1">Name</label>
-					<input type="name" name="" id="1" />
-					<label for="2">Email</label>
-					<input type="email" name="" id="2" />
-					<label for="3">Phone Number</label>
-					<input type="Phone number" name="" id="3" />
+					<input class="InputName" type="name" name="name" id="1" placeholder="Name" />
+					<input class="inputEmail" type="email" name="email" id="2" placeholder="Email" />
+					<input class="inputPhone" type="Phone number" name="Phone" id="3" placeholder="Phone" />
 				</div>
 				<body>
 					<html></html>
